@@ -5,6 +5,14 @@ $Id$
           server.
         * src/plugins/maildir/maildir.c: Added timer-based checking
           to support systems that don't have dnotify.
+        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
+          Fixed memleaks caused by not freeing the result of
+          e_db_str_get().
+        * src/embrace.c, src/plugins/pop3/pop3.c,
+          src/plugins/imap/imap.c, src/plugins/mbox/mbox.c,
+          src/plugins/maildir/maildir.c:
+          Finally Embrace will tell you when a mailbox cannot be
+          loaded due to configuration errors.
 
 2004-04-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * src/plugins/pop3/pop3.c: The POP3 plugin will now tell you
